# metis-rs

./: .gitignore  Cargo.toml  README.md
metis-core/: Cargo.toml
metis-core-derive/: Cargo.toml
metis-core-derive/src/: lib.rs
metis-core/src/: lib.rs
metis-core/tests/: static_fact_test.rs
metis-parser/: Cargo.toml
metis-parser/src/: lib.rs
