[package]
name = "metis-core"
version = "0.1.0"
authors = ["abaxter <Adam Baxter>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metis-core-derive = {path = "../metis-core-derive"}
ordered-float = "1.0"
num-traits = "0.2"
float-cmp = "0.6"
itertools = "0.8"
string-interner = "0.7"
anymap = "0.12"
dyn-clone = "1.0"
